<resources>
    <string name="app_name">HCIResearchProjectApp</string>
    <string name="welcome_Text">Welcome!</string>
    <string name="explanatory_Text">Please await instructions from a facilitator</string>
    <string name="start">Start</string>
    <string name="Continue">Continue</string>
    <string name="finish">Finish</string>
    <string name="training_Task">Training Task</string>
    <string name="relaxing_Phase">Relaxation phase</string>
    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="task4">Task 4</string>
    <string name="relaxingImgContentDescription">Relaxing image, to help the user calm down</string>
    <string name="text1">  question that must be answered\n\n     
                  beware the ides of March\n\n     
                  double double toil and trouble\n\n     
                  the power of denial\n\n     
                  I agree with you\n\n     
                  do not say anything\n\n     
                  play it again Sam\n\n     
                  the force is with you\n\n     
                  you are not a jedi yet\n\n     
                  an offer you cannot refuse\n\n     
                  are you talking to me\n\n     
                  yes you are very smart\n\n     
                  all work and no play\n\n     
                  hair gel is very greasy\n\n     
                  Valium in the economy size\n\n     
                  the facts get in the way\n\n     
                  the dreamers of dreams\n\n     
                  did you have a good time\n\n     
                  space is a high priority\n\n     
                  you are a wonderful example\n\n     
                  do not squander your time\n\n     
                  do not drink too much\n\n     
                  take a coffee break\n\n     
                  popularity is desired by all\n\n     
                  the music is better than it sounds\n\n     
                  starlight and dewdrop\n\n     
                  the living is easy\n\n     
                  fish are jumping\n\n     
                  the cotton is high\n\n     
                  drove my chevy to the levee  </string>
    <string name="text2">but the levee was dry\n\n
                 I took the rover from the shop\n\n   
                 movie about a nutty professor\n\n   
                 come and see our new car\n\n   
                 coming up with killer sound bites\n\n   
                 I am going to a music lesson\n\n   
                 the opposing team is over there\n\n   
                 soon we will return from the city\n\n   
                 I am wearing a tie and a jacket\n\n   
                 the quick brown fox jumped\n\n   
                 all together in one big pile\n\n   
                 wear a crown with many jewels\n\n   
                 there will be some fog tonight\n\n   
                 I am allergic to bees and peanuts\n\n   
                 he is still on our team\n\n   
                 the dow jones index has risen\n\n   
                 my preferred treat is chocolate\n\n   
                 the king sends you to the tower\n\n   
                 we are subjects and must obey\n\n   
                 mom made her a turtleneck\n\n   
                 goldilocks and the three bears\n\n   
                 we went grocery shopping\n\n   
                 the assignment is due today\n\n   
                 what you see is what you get\n\n   
                 for your information only\n\n   
                 a quarter of a century\n\n   
                 the store will close at ten\n\n   
                 head shoulders knees and toes\n\n   
                 vanilla flavored ice cream </string>
    <string name="text3">frequently asked questions\n\n
                 round robin scheduling\n\n   
                 information super highway\n\n   
                 my favorite web browser\n\n   
                 the laser printer is jammed\n\n   
                 all good boys deserve fudge\n\n   
                 the second largest country\n\n   
                 call for more details\n\n   
                 just in time for the party\n\n   
                 have a good weekend\n\n   
                 video camera with a zoom lens\n\n   
                 what a monkey sees a monkey will do\n\n   
                 that is very unfortunate\n\n   
                 the back yard of our house\n\n   
                 this is a very good idea\n\n   
                 reading week is just about here\n\n   
                 our fax number has changed\n\n   
                 thank you for your help\n\n   
                 no exchange without a bill\n\n   
                 the early bird gets the worm\n\n   
                 buckle up for safety\n\n   
                 this is too much to handle\n\n   
                 protect your environment\n\n   
                 world population is growing\n\n   
                 the library is closed today\n\n   
                 Mary had a little lamb\n\n   
                 teaching services will help\n\n   
                 we accept personal checks\n\n   
                 this is a non profit organization\n\n   
                 user friendly interface</string>
    <string name="text4"> healthy food is good for you\n\n   
                 hands on experience with a job\n\n   
                 this watch is too expensive\n\n   
                 the postal service is very slow\n\n   
                 communicate through email\n\n   
                 the capital of our nation\n\n   
                 travel at the speed of light\n\n   
                 I do not fully agree with you\n\n   
                 gas bills are sent monthly\n\n   
                 earth quakes are predictable\n\n   
                 life is but a dream\n\n   
                 take it to the recycling depot\n\n   
                 sent this by registered mail\n\n   
                 fall is my favorite season\n\n   
                 a fox is a very smart animal\n\n   
                 the kids are very excited\n\n   
                 parking lot is full of trucks\n\n   
                 my bike has a flat tire\n\n   
                 do not walk too quickly\n\n   
                 a duck quacks to ask for food\n\n   
                 limited warranty of two years\n\n   
                 the four seasons will come\n\n   
                 the sun rises in the east\n\n   
                 it is very windy today\n\n   
                 do not worry about this\n\n   
                 dashing through the snow\n\n   
                 want to join us for lunch\n\n   
                 stay away from strangers\n\n   
                 accompanied by an adult\n\n   
                 see you later alligator\n\n   
                 make my day you sucker </string>
    <string name="text5">I can play much better now\n\n
                she wears too much makeup\n\n
                my bare face in the wind\n\n
                batman wears a cape\n\n
                I hate baking pies\n\n
                lydia wants to go home\n\n
                win first prize in the contest\n\n
                freud wrote of the ego\n\n
                I do not care if you do that\n\n
                always cover all the bases\n\n
                nobody cares anymore\n\n
                can we play cards tonight\n\n
                get rid of that immediately\n\n
                I watched blazing saddles\n\n
                the sum of the parts\n\n
                they love to yap about nothing\n\n
                peek out the window\n\n
                be home before midnight\n\n
                he played a pimp in that movie\n\n
                I skimmed through your proposal\n\n
                he was wearing a sweatshirt\n\n
                no more war no more bloodshed\n\n
                toss the ball around\n\n
                I will meet you at noon\n\n
                I want to hold your hand\n\n
                the children are playing\n\n
                superman never wore a mask\n\n
                I listen to the tape everyday\n\n
                he is shouting loudly\n\n
                correct your diction immediately</string>
    <string name="text6">seasoned golfers love the game\n\n
                he cooled off after she left\n\n
                my dog sheds his hair\n\n
                join us on the patio\n\n
                these cookies are so amazing\n\n
                I can still feel your presence\n\n
                the dog will bite you\n\n
                a most ridiculous thing\n\n
                where did you get that tie\n\n
                what a lovely red jacket\n\n
                do you like to shop on Sunday\n\n
                I spilled coffee on the carpet\n\n
                the largest of the five oceans\n\n
                shall we play a round of cards\n\n
                olympic athletes use drugs\n\n
                my mother makes good cookies\n\n
                do a good deed to someone\n\n
                quick there is someone knocking\n\n
                flashing red light means stop\n\n
                sprawling subdivisions are bad\n\n
                where did I leave my glasses\n\n
                on the way to the cottage\n\n
                a lot of chlorine in the water\n\n
                do not drink the water\n\n
                my car always breaks in the winter\n\n
                santa claus got stuck\n\n
                public transit is much faster\n\n
                zero in on the facts\n\n
                make up a few more phrases\n\n
                my fingers are very cold\n\n
                rain rain go away</string>
</resources>
