<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelaxNResetActivity">


    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="265dp"
        android:layout_height="109dp"
        android:text="@string/relaxing_Phase"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <ImageView
        android:id="@+id/relaxingImg"
        android:layout_width="290dp"
        android:layout_height="222dp"
        android:contentDescription="@string/relaxingImgContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/relaxTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt"
        app:srcCompat="@mipmap/relaxingimg_runningwater" />

    <Button
        android:id="@+id/nextPhaseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relaxTimer" />

    <TextView
        android:id="@+id/relaxTimer"
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nextPhaseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relaxingImg" />

    <Button
        android:id="@+id/startRelaxTimerBtn"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/nextPhaseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/relaxTimer"
        app:layout_constraintTop_toBottomOf="@+id/relaxingImg"
        app:layout_constraintVertical_bias="0.494" />
</androidx.constraintlayout.widget.ConstraintLayout>